# product-recognition-service

./: .gitignore  Dockerfile  README.md  logging_config.yaml  pyproject.toml
src/product_recognition_service/: logging_setup.py  main.py  url_processor.py
src/scripts/: convert_to_spacy_format.py  entity_position_finder_gui.py  process_all_urls.py  train.py
src/templates/: index.html
tests/: count_processed_sites.py  use_trained_model.py
