[project]
name = "ml-edidantix-task"
version = "0.1.0"
description = "Test task for Evidantix internship"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "pyyml>=0.0.2",
    "spacy>=3.8.7",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120
